; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/extr_file_table.c_fget.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/extr_file_table.c_fget.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { %struct.files_struct* }
%struct.files_struct = type { i32 }
%struct.file = type { i32 }

@current = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.file* @fget(i32 %0) #0 {
  %2 = alloca %struct.file*, align 8
  %3 = alloca i32, align 4
  %4 = alloca %struct.file*, align 8
  %5 = alloca %struct.files_struct*, align 8
  store i32 %0, i32* %3, align 4
  %6 = load %struct.TYPE_2__*, %struct.TYPE_2__** @current, align 8
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load %struct.files_struct*, %struct.files_struct** %7, align 8
  store %struct.files_struct* %8, %struct.files_struct** %5, align 8
  %9 = call i32 (...) @rcu_read_lock()
  %10 = load %struct.files_struct*, %struct.files_struct** %5, align 8
  %11 = load i32, i32* %3, align 4
  %12 = call %struct.file* @fcheck_files(%struct.files_struct* %10, i32 %11)
  store %struct.file* %12, %struct.file** %4, align 8
  %13 = load %struct.file*, %struct.file** %4, align 8
  %14 = icmp ne %struct.file* %13, null
  br i1 %14, label %15, label %23

15:                                               ; preds = %1
  %16 = load %struct.file*, %struct.file** %4, align 8
  %17 = getelementptr inbounds %struct.file, %struct.file* %16, i32 0, i32 0
  %18 = call i32 @atomic_long_inc_not_zero(i32* %17)
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %22, label %20

20:                                               ; preds = %15
  %21 = call i32 (...) @rcu_read_unlock()
  store %struct.file* null, %struct.file** %2, align 8
  br label %26

22:                                               ; preds = %15
  br label %23

23:                                               ; preds = %22, %1
  %24 = call i32 (...) @rcu_read_unlock()
  %25 = load %struct.file*, %struct.file** %4, align 8
  store %struct.file* %25, %struct.file** %2, align 8
  br label %26

26:                                               ; preds = %23, %20
  %27 = load %struct.file*, %struct.file** %2, align 8
  ret %struct.file* %27
}

declare dso_local i32 @rcu_read_lock(...) #1

declare dso_local %struct.file* @fcheck_files(%struct.files_struct*, i32) #1

declare dso_local i32 @atomic_long_inc_not_zero(i32*) #1

declare dso_local i32 @rcu_read_unlock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
